lost-in-the-scroll/styles/styles.css
@import "./variables.css";
@import "./reset.css";



/*STARTER CODE*/
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: auto !important; /* Let GSAP handle the movement */
}

body {
/*   font-family: system-ui, sans-serif; */
  color: #f0f0f0;
  background: #1a1a2e;
  font-family: "Barlow Semi Condensed", system-ui, sans-serif;
  font-size: 1.2rem;
  height: auto;
}



.star-container {
  position: relative;
  height: auto;
  overflow: visible !important;
}

/* The scene container */
.parallax-scene {
  position: relative;
  height: auto;
  min-height: 600vh;
  /* overflow: hidden; */
}


/* All layers fill the scene */
.layer {
  position: absolute;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.star-layer {
  position: fixed; 
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
    pointer-events: none;
  z-index: -1;
}
#stars, #stars2, #stars3 {
  overflow: visible;
  position: fixed;
}

/* Background layer */
#stars {
  width: 1px; 
  height: 1px;
}
#stars2 {
  width: 2px; 
  height: 2px;
}

/* Foreground layer */
.layer--fg {
  position: absolute;
  z-index: 4;
}
#stars3 {
  width: 3px; 
  height: 3px;
}
.fg-text {
  text-align: center;
  text-shadow: 2px 2px #1a1a2e;
  position: absolute;
  top: 50vh;
  color: #FFCA42;
}
.fg-heading {
  font-size: 4rem;
  font-weight: 900;
}

#planet{
  height: 150vh;
  position: fixed;
  top: 50%;
  right: 0;
  z-index: 3;
}

.hidden {
  display: none;
}


/*INTRO UFO SECTION*/
/* .column {
  width: 70%;
  max-width: 70%;
  /*height: 100vh;
 display: flex;
  flex-direction: column;
  align-items: center;
  height: auto;
  /* z-index: 5; 
  position: relative;
  top: 200vh;
  text-align: left;
  overflow: visible;
  border: 3px solid red;
} */
 .column{
  width: 70%;
  max-width: 70%;
  position: relative;
  height: auto;
  /* display: flex;
  flex-direction: column;
  align-items: center; */
  min-height: 100vh;
  top: 200vh;
  border: 2px solid red;
 }
.chapter{
  width: 80%;
}

.text-box {
  position: absolute;
  top: 70%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: var(--brightyellow);
  color: var(--darkpurple);
  padding: var(--sizel);
  width: 90%;
  z-index: 20;
  visibility: hidden;
}


.spacer {
  position: relative;

  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 0;
  z-index: 100;
  opacity: 70%;
  border: 2px solid #0f0;
  /* background-color: dodgerblue; */

}
/* .text-box{
  background: #FFCA42;
  color: #31236F;
  padding: var(--sizel);
  width: 90%;
  margin: 32px auto;

  position: absolute;
  top: 70%;
  left: 50%;
  /* transform: translate(-50%, -50%); */
  /* transform: translate(-50%, -50%) translateX(-150vw); */
  /* visibility: hidden;
} */




.step {
  height: 100vh;
  outline: 1px solid lightpink;
}

#ufo {
  width: 60%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: auto;
  min-height: 200px; 
  flex-shrink: 0; 
  overflow: visible;
  will-change: transform;
  z-index: 10;
  position: relative;

  /* margin: 0 auto; */
  
}

.fire1, .fire2 {
  transform-origin: top center;
  transform: translateY(-80px);
}
.fire2{
  transform: translateX(-149px);
}

#lens {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 10;
  width: 25%;
  height: fit-content;
}
#lens image {
  display: none;
}

